@@ -1,7 +1,5 @@
 SUBDIRS = \
 	geos
 
-geosdir = $(prefix)/include
-
-geos_HEADERS = \
+include_HEADERS = \
 	geos.h
