@@ -1,4 +1,4 @@
-geosdir = $(prefix)/include/geos
+geosdir = $(includedir)/geos
 
 EXTRA_DIST = platform.h.vc
 
